96boards-reference-platform-debian: no need to remove out when cleaning it up
Signed-off-by: Ricardo Salveti de Araujo <rsalveti@rsalveti.net>

--- a/96boards-reference-platform-debian.yaml
+++ b/96boards-reference-platform-debian.yaml
@@ -40,7 +40,7 @@
             {
               cd ${WORKSPACE}
               sudo kpartx -dv ${BOARD}-jessie_*.img || true
-              rm -rf configs out
+              rm -rf configs
             }
 
             # Builder setup
