grub.cfg.in: adding fastboot entry
Signed-off-by: Ricardo Salveti de Araujo <rsalveti@rsalveti.net>

--- a/96boards-reference-platform-debian/grub/grub.cfg.in
+++ b/96boards-reference-platform-debian/grub/grub.cfg.in
@@ -7,3 +7,8 @@ menuentry 'Debian GNU/Linux' {
     initrd /boot/initrd.img
     devicetree /boot/dtbs/DEVICE_TREE
 }
+
+menuentry 'Fastboot' {
+    search.fs_label BOOT\ IMG boot_part
+    chainloader ($boot_part)/fastboot.efi
+}
